--- a/visualizer/main.ipynb
+++ b/visualizer/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "ef65b332",
    "metadata": {},
    "outputs": [],
@@ -43,14 +43,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "ce732687",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "228e477fa54b4a9ebc48ee5ae6310d60",
+       "model_id": "70af1ff10a5c42f98f1db2ad6a4cbfe9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -64,56 +64,41 @@
    ],
    "source": [
     "dataset_dropdown = widgets.Dropdown(options=datasets, description=\"Dataset:\")\n",
-    "\n",
     "file_dropdown = widgets.Dropdown(options=[], description=\"File:\")\n",
-    "\n",
-    "visualize_button = widgets.Button(description=\"Visualize\", button_style=\"success\")\n",
-    "\n",
     "output = widgets.Output()\n",
-    "\n",
     "\n",
     "def update_files(change=None):\n",
     "    \"\"\"Update file dropdown when dataset changes\"\"\"\n",
     "    if dataset_dropdown.value:\n",
     "        files = get_annotation_files(dataset_dropdown.value, base_dir)\n",
     "        file_dropdown.options = files\n",
+    "        # Clear output when dataset changes\n",
+    "        with output:\n",
+    "            clear_output(wait=True)\n",
     "\n",
-    "\n",
-    "def on_visualize(button):\n",
-    "    \"\"\"Run your existing function\"\"\"\n",
+    "def auto_visualize(change=None):\n",
+    "    \"\"\"Auto-visualize when file is selected\"\"\"\n",
     "    with output:\n",
     "        clear_output(wait=True)\n",
-    "\n",
+    "        \n",
     "        if not dataset_dropdown.value or not file_dropdown.value:\n",
-    "            print(\"Select dataset and file first\")\n",
-    "            return\n",
-    "\n",
-    "        # Call YOUR function with the right parameters\n",
+    "            return  # Silently bail - no nagging messages\n",
+    "        \n",
+    "        # Your visualization shit\n",
     "        dataset_path = os.path.join(base_dir, dataset_dropdown.value)\n",
-    "        output_path = visualize_bounding_boxes(file_dropdown.value, dataset_path)\n",
+    "        image = visualize_bounding_boxes(file_dropdown.value, dataset_path, False)\n",
+    "        display(image)\n",
     "\n",
-    "        if output_path and os.path.exists(output_path):\n",
-    "            display(IPImage(filename=output_path))\n",
-    "\n",
-    "\n",
-    "# Wire up the shit\n",
+    "# Wire up the observers\n",
     "dataset_dropdown.observe(update_files, names=\"value\")\n",
-    "visualize_button.on_click(on_visualize)\n",
+    "file_dropdown.observe(auto_visualize, names=\"value\")  # This triggers on file selection\n",
     "\n",
-    "# Initialize files for first dataset\n",
+    "# Initialize\n",
     "update_files()\n",
     "\n",
-    "# Display the interface\n",
-    "display(widgets.VBox([dataset_dropdown, file_dropdown, visualize_button, output]))"
+    "# Clean interface - no fucking button\n",
+    "display(widgets.VBox([dataset_dropdown, file_dropdown, output]))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6d57e5ca-dbb1-4c32-ac21-9934223160a2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
